--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </section>
         <section id="redes-sociais">
             <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twiter"></a> <br>
